prod_snapshot_2015-09-24_1030/objects/Order_Fulfillment__c.object
<CustomObject>
    <description>Holds granular product level order details for Customer Care order fulfillment process.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Opportunity__r.Account.Legacy_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Size_FS__c</fullName>
        <description>Ad Size for Fashion &amp; Style section</description>
        <label>Ad Size_FS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Size_ROP__c</fullName>
        <label>Ad Size</label>
        <picklist>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Size_VV__c</fullName>
        <label>Ad Size</label>
        <picklist>
            <picklistValues>
                <fullName>1/3 Page</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Size__c</fullName>
        <label>Ad Size</label>
        <picklist>
            <picklistValues>
                <fullName>1/8 page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4 page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2 page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Type_ROP__c</fullName>
        <label>Ad Type</label>
        <picklist>
            <picklistValues>
                <fullName>B/W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Geography__c</fullName>
        <label>Alternate Geography</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artwork_Change_1_Flyers__c</fullName>
        <label>Artwork Change 1 Flyers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Change_2_Flyers__c</fullName>
        <label>Artwork Change 2 Flyers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Change_3_Flyers__c</fullName>
        <label>Artwork Change 3 Flyers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Change_7_Reminder_Date__c</fullName>
        <label>Artwork Change 7 Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Change_Month_2__c</fullName>
        <label>Artwork Change 2 Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Change_Month_3__c</fullName>
        <label>Artwork Change 3 Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Change_Month_4__c</fullName>
        <label>Artwork Change 4 Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>B_W_or_Color__c</fullName>
        <label>B/W or Color?</label>
        <picklist>
            <picklistValues>
                <fullName>B/W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blast_Date__c</fullName>
        <label>Blast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_Orientation__c</fullName>
        <label>Brand Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Template__c</fullName>
        <label>Brand Template</label>
        <picklist>
            <controllingField>Brand_Orientation__c</controllingField>
            <picklistValues>
                <fullName>Z16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branding_Address__c</fullName>
        <label>Branding Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branding_Body__c</fullName>
        <label>Branding Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branding_Call_to_Action__c</fullName>
        <label>Branding Call to Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branding_Headline__c</fullName>
        <label>Branding Headline</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branding_Subhead__c</fullName>
        <label>Branding Subhead</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <picklist>
            <controllingField>Campaign_Type__c</controllingField>
            <picklistValues>
                <fullName>300</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bus_Profile_of_Months__c</fullName>
        <label># of Months</label>
        <picklist>
            <picklistValues>
                <fullName>3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OS Biz Profile w/ Call Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <description>Cost per thousand</description>
        <inlineHelpText>Cost per thousand</inlineHelpText>
        <label>CPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Tracking_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Tracking?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Tracking_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Tracking?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_to_Action__c</fullName>
        <inlineHelpText>Be as specific as possible. Suggesting designer use art from website is not enough – provide detailed instructions of exactly which art, logo’s, etc..</inlineHelpText>
        <label>Call to Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranteed Clicks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Review all error messages below to correct your data.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty / Barber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eating and drinking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education &amp; religion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial services / Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Improvement Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niche Medical Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claimed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person In Cincinnati Print Fulfillment Who Has Taken Responsibility For The Completion Of This Order.</inlineHelpText>
        <label>Claimed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Fulfillment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Cost__c</fullName>
        <label>Conversion Cost</label>
        <picklist>
            <picklistValues>
                <fullName>150.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Quantity_2__c</fullName>
        <label>Cost Per Quantity</label>
        <picklist>
            <controllingField>Demo_E_mail_Blast_Quantity__c</controllingField>
            <picklistValues>
                <fullName>725.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1100.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1250.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1450.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1600.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1750.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2700.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Quantity_3__c</fullName>
        <description>Demo Cost Per Quantity- B2B</description>
        <label>Cost Per Quantity</label>
        <picklist>
            <controllingField>Demo_E_mail_Blast_Quantity_2__c</controllingField>
            <picklistValues>
                <fullName>750.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>950.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,150.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,300.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,500.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,650.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,100.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3,000.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4,200.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Quantity_4__c</fullName>
        <description>Geo Targeted v2</description>
        <label>Cost Per Quantity</label>
        <picklist>
            <controllingField>Geo_E_mail_Blast_Quanitity_2__c</controllingField>
            <picklistValues>
                <fullName>300.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>850.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,050.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,200.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,400.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,550.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,700.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,300.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,750.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Quantity__c</fullName>
        <label>Cost Per Quantity</label>
        <picklist>
            <controllingField>Geo_E_mail_Blast_Quantity__c</controllingField>
            <picklistValues>
                <fullName>250.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>450.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>650.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1150.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1350.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1650.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2250.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2700.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Landing_Page_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Landing Page Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_E_mail_Blast_Quantity_2__c</fullName>
        <label>Demo E-mail Blast Quantity</label>
        <picklist>
            <controllingField>Targeting_2__c</controllingField>
            <picklistValues>
                <fullName>0 - 2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,501 - 3,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3,001 - 4,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4,001 - 5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,001 - 6,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6,001 - 7,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7,001 - 8,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8,001 - 9,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9,001 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,001 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,001 - 150,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demo_E_mail_Blast_Quantity__c</fullName>
        <label>Demo E-mail Blast Quantity</label>
        <picklist>
            <controllingField>Targeting__c</controllingField>
            <picklistValues>
                <fullName>0 - 2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,501 - 3,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3,001 - 4,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4,001 - 5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,001 - 6,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6,001- 7,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7,001 - 8,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8,001 - 9,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9,001 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,001 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,001 - 150,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Display_Reporting__c</fullName>
        <label>Digital Display Reporting</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Back_Address__c</fullName>
        <label>Direct Back Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Back_Coupons__c</fullName>
        <label>Direct Back Coupons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Back_Headline__c</fullName>
        <label>Direct Back Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Color_Theme__c</fullName>
        <label>Direct Color Theme</label>
        <picklist>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Front_Address__c</fullName>
        <label>Direct Front Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Front_Body_Copy__c</fullName>
        <label>Direct Front Body Copy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Front_Headline__c</fullName>
        <label>Direct Front Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Front_Subhead__c</fullName>
        <label>Direct Front Subhead</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Address__c</fullName>
        <label>Direct Response Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Body__c</fullName>
        <label>Direct Response Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Coupon__c</fullName>
        <label>Direct Response Coupon</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Disclaimer__c</fullName>
        <label>Direct Response Disclaimer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Headline__c</fullName>
        <inlineHelpText>Artwork can be changed monthly</inlineHelpText>
        <label>Direct Response Headline</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Orientation__c</fullName>
        <label>Direct Response Orientation</label>
        <picklist>
            <controllingField>Direct_Response_Size__c</controllingField>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Size__c</fullName>
        <label>Direct Response Size</label>
        <picklist>
            <picklistValues>
                <fullName>1/8 Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4 Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Subhead__c</fullName>
        <label>Direct Response Subhead</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Response_Template__c</fullName>
        <label>Direct Response Template</label>
        <picklist>
            <controllingField>Direct_Response_Orientation__c</controllingField>
            <picklistValues>
                <fullName>Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z22</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Art_Reminder_10__c</fullName>
        <label>Display Art Reminder 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Art_Reminder_11__c</fullName>
        <label>Display Art Reminder 11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Art_Reminder_12__c</fullName>
        <label>Display Art Reminder 12</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Art_Reminder__c</fullName>
        <label>Display Art Reminder 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drop_Date__c</fullName>
        <label>Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_of_Material__c</fullName>
        <label>Estimated Date of Material</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Address__c</fullName>
        <label>Event Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Back_Address__c</fullName>
        <label>Event Back Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Back_Headline__c</fullName>
        <label>Event Back Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Back_Message__c</fullName>
        <label>Event Back Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Body__c</fullName>
        <label>Event Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Color_Theme__c</fullName>
        <label>Event Color Theme</label>
        <picklist>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Disclaimer__c</fullName>
        <label>Event Disclaimer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Front_Address__c</fullName>
        <label>Event Front Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Front_Headline__c</fullName>
        <label>Event Front Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Front_Message__c</fullName>
        <label>Event Front Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Front_Subhead__c</fullName>
        <label>Event Front Subhead</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Headline__c</fullName>
        <label>Event Headline</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Info__c</fullName>
        <label>Event Info</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Orientation__c</fullName>
        <label>Event Orientation</label>
        <picklist>
            <controllingField>Event_Size__c</controllingField>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Size__c</fullName>
        <label>Event Size</label>
        <picklist>
            <picklistValues>
                <fullName>1/8 Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4 Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Template__c</fullName>
        <label>Event Template</label>
        <picklist>
            <controllingField>Event_Orientation__c</controllingField>
            <picklistValues>
                <fullName>Z4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>